syntax = "proto3";

option java_package = "com.ch8n.thatsmine";
option java_multiple_files = true;

message ProtoSettings {

  message ActiveUser{
    string userId = 1;
    string userName = 2;
    string fullName = 3;
    string email = 4;
  }

  enum Theme {
    Light = 0;
    Dark = 1;
  }

  bool notification_enabled = 1;
  bool loggedIn = 2;
  bool guestMode = 3;
  ActiveUser activeUser = 4;
  Theme currentTheme = 5;

}
